--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cotato-openapi-clients",
-  "version": "2.250115.0-role.1",
+  "version": "2.250208.0",
   "private": false,
   "dependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4",
